fix weird outline visible by default

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -1,3 +1,6 @@
+#CushyStudio:focus {
+    outline: none;
+}
 /*
 @font-face {
     font-family: 'inter';
